[package]
name = "stsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.18.3"
clap = { version = "4.5.4", features = ["derive"] }
ratatui = "0.26.2"
crossterm = "0.27.0"
tempdir = "0.3.7"
anyhow = "1.0.89"
colored = "2.1.0"

