[package]
name = "stsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.18.3"
clap = { version = "4.5.4", features = ["derive"] }
ratatui = { version = "0.26.2", features = ["crossterm"] }
anyhow = "1.0.89"
colored = "2.1.0"
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
tokio = { version = "1.40.0", features = ["macros", "rt", "sync", "time", "rt-multi-thread"] }
futures = "0.3.31"
tokio-util = "0.7.12"
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }


